src/Parser.output
Terminals unused in grammar

    T_TYPES_HASH_MAX_SIZE
    T_TYPES_HASH_MAX_SIZE_VALUE


Grammar

    0 $accept: servers $end

    1 servers: servers server
    2        | server
    3        | user
    4        | group
    5        | worker_processes
    6        | pid
    7        | events
    8        | http

    9 events: T_EVENTS '{' event_body_list '}'

   10 event_body_list: worker_connections
   11                | multi_accept

   12 server_body: T_SERVER_NAME server_name_values ';'
   13            | T_SERVER_ROOT T_SERVER_ROOT_PATH ';'
   14            | error_log
   15            | T_LOCATION location_optional_regexp_path T_LOCATION_PATH '{' location_body_list '}'
   16            | T_LOCATION T_LOCATION_PATH_EQUAL T_LOCATION_PATH '{' location_body_list '}'
   17            | listen
   18            | add_header
   19            | index
   20            | charset
   21            | error_page
   22            | deny
   23            | include
   24            | return
   25            | rewrite
   26            | log_not_found
   27            | access_log

   28 location_body: T_RETURN T_RETURN_CODE optional_return_body ';'
   29              | T_FAST_CGI_PATH T_FAST_CGI_PATH_PATH ';'
   30              | T_FAST_CGI_SPLIT_PATH_INFO T_FAST_CGI_SPLIT_PATH_INFO_PATH ';'
   31              | T_FAST_CGI_PARAM T_FAST_CGI_PARAM_KEY T_FAST_CGI_PARAM_VALUE ';'
   32              | T_INCLUDE T_INCLUDE_PATH ';'
   33              | T_INTERNAL ';'
   34              | T_TRY_FILES try_files_path_list ';'
   35              | deny
   36              | hide_header
   37              | add_header
   38              | error_page
   39              | access_log
   40              | log_not_found

   41 http_body: ε
   42          | servers
   43          | sendfile
   44          | types_hash
   45          | server_tokens
   46          | server_names_hash_bucket_size
   47          | ssl_protocols
   48          | ssl_prefer_server_ciphers
   49          | access_log
   50          | error_log
   51          | gzip
   52          | include
   53          | tcp_nopush
   54          | default_type

   55 worker_processes: T_WORKER_PROCESSES T_WORKER_PROCESSES_VALUE ';'

   56 http: T_HTTP '{' http_body '}'

   57 worker_connections: T_WORKER_CONNECTIONS T_WORKER_CONNECTIONS_VALUE ';'

   58 tcp_nopush: T_TCP_NOPUSH T_TCP_NOPUSH_VALUE ';'

   59 server: T_SERVER '{' server_body_list '}'

   60 pid: T_PID T_PID_VALUE ';'

   61 rewrite: T_REWRITE T_REWRITE_REGEX T_REWRITE_REPLACEMENT T_REWRITE_FLAG ';'

   62 deny: T_DENY T_DENY_VALUE ';'

   63 hide_header: T_FAST_CGI_HIDE_HEADER T_FAST_CGI_HIDE_HEADER_KEY ';'

   64 gzip: T_GZIP T_GZIP_VALUE ';'

   65 sendfile: T_SENDFILE T_SENDFILE_VALUE ';'

   66 types_hash: T_TYPES_HASH T_TYPES_HASH_VALUE ';'

   67 server_tokens: T_SERVER_TOKENS T_SERVER_TOKENS_VALUE ';'

   68 server_names_hash_bucket_size: T_SERVER_NAMES_HASH_BUCKET_SIZE T_SERVER_NAMES_HASH_BUCKET_SIZE_VALUE ';'

   69 ssl_protocols: T_SSL_PROTOCOLS T_SSL_PROTOCOLS_VALUE ';'
   70              | T_SSL_PROTOCOLS T_SSL_PROTOCOLS_VALUE T_SSL_PROTOCOLS_VALUE2 ';'
   71              | T_SSL_PROTOCOLS T_SSL_PROTOCOLS_VALUE T_SSL_PROTOCOLS_VALUE2 T_SSL_PROTOCOLS_VALUE3 ';'
   72              | T_SSL_PROTOCOLS T_SSL_PROTOCOLS_VALUE T_SSL_PROTOCOLS_VALUE2 T_SSL_PROTOCOLS_VALUE3 T_SSL_PROTOCOLS_VALUE4 ';'

   73 ssl_prefer_server_ciphers: T_SSL_PREFER_SERVER_CIPHERS T_SSL_PREFER_SERVER_CIPHERS_VALUE ';'

   74 default_type: T_DEFAULT_TYPE T_DEFAULT_TYPE_VALUE ';'

   75 listen: T_LISTEN T_LISTEN_VALUE ';'
   76       | T_LISTEN T_LISTEN_VALUE T_LISTEN_VALUE_DEFAULT ';'

   77 server_name_values: T_SERVER_NAME_VALUE
   78                   | server_name_values T_SERVER_NAME_VALUE

   79 error_log: T_ERROR_LOG T_ERROR_LOG_PATH ';'

   80 user: T_USER T_USER_VALUE ';'

   81 group: T_GROUP T_GROUP_VALUE ';'

   82 location_optional_regexp_path: ε
   83                              | T_LOCATION_PATH_REGEXP

   84 add_header: T_ADD_HEADER T_ADD_HEADER_KEY T_ADD_HEADER_VALUE ';'

   85 index: T_INDEX T_INDEX_VALUE ';'

   86 access_log: T_ACCESS_LOG T_ACCESS_LOG_PATH ';'

   87 log_not_found: T_LOG_NOT_FOUND T_LOG_NOT_FOUND_VALUE ';'

   88 charset: T_CHARSET T_CHARSET_VALUE ';'

   89 error_page: T_ERROR_PAGE T_ERROR_PAGE_CODE T_ERROR_PAGE_URI ';'

   90 include: T_INCLUDE T_INCLUDE_PATH ';'

   91 return: T_RETURN T_RETURN_CODE optional_return_body ';'

   92 multi_accept: T_MULTI_ACCEPT T_MULTI_ACCEPT_VALUE ';'

   93 server_body_list: server_body_list server_body
   94                 | ε

   95 optional_return_body: ε
   96                     | T_RETURN_BODY

   97 try_files_path_list: T_TRY_FILES_PATH
   98                    | try_files_path_list T_TRY_FILES_PATH

   99 location_body_list: location_body_list location_body
  100                   | ε


Terminals, with rules where they appear

    $end (0) 0
    ';' (59) 12 13 28 29 30 31 32 33 34 55 57 58 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 79 80 81 84 85 86 87 88 89 90 91 92
    '{' (123) 9 15 16 56 59
    '}' (125) 9 15 16 56 59
    error (256)
    T_SERVER (258) 59
    T_LISTEN (259) 75 76
    T_LISTEN_VALUE (260) 75 76
    T_LISTEN_VALUE_DEFAULT (261) 76
    T_SERVER_NAME (262) 12
    T_SERVER_NAME_VALUE (263) 77 78
    T_SERVER_ROOT (264) 13
    T_SERVER_ROOT_PATH (265) 13
    T_LOCATION (266) 15 16
    T_LOCATION_PATH (267) 15 16
    T_LOCATION_PATH_REGEXP (268) 83
    T_RETURN (269) 28 91
    T_RETURN_CODE (270) 28 91
    T_RETURN_BODY (271) 96
    T_REWRITE (272) 61
    T_REWRITE_REGEX (273) 61
    T_REWRITE_REPLACEMENT (274) 61
    T_REWRITE_FLAG (275) 61
    T_ERROR_LOG (276) 79
    T_ERROR_LOG_PATH (277) 79
    T_ACCESS_LOG (278) 86
    T_ACCESS_LOG_PATH (279) 86
    T_FAST_CGI_PATH (280) 29
    T_FAST_CGI_PATH_PATH (281) 29
    T_FAST_CGI_SPLIT_PATH_INFO (282) 30
    T_FAST_CGI_SPLIT_PATH_INFO_PATH (283) 30
    T_FAST_CGI_PARAM (284) 31
    T_FAST_CGI_PARAM_KEY (285) 31
    T_FAST_CGI_PARAM_VALUE (286) 31
    T_FAST_CGI_HIDE_HEADER (287) 63
    T_FAST_CGI_HIDE_HEADER_KEY (288) 63
    T_INCLUDE (289) 32 90
    T_INCLUDE_PATH (290) 32 90
    T_INTERNAL (291) 33
    T_TRY_FILES (292) 34
    T_TRY_FILES_PATH (293) 97 98
    T_ADD_HEADER (294) 84
    T_ADD_HEADER_KEY (295) 84
    T_ADD_HEADER_VALUE (296) 84
    T_INDEX (297) 85
    T_INDEX_VALUE (298) 85
    T_CHARSET (299) 88
    T_CHARSET_VALUE (300) 88
    T_ERROR_PAGE (301) 89
    T_ERROR_PAGE_CODE (302) 89
    T_ERROR_PAGE_URI (303) 89
    T_DENY (304) 62
    T_DENY_VALUE (305) 62
    T_LOCATION_PATH_EQUAL (306) 16
    T_LOG_NOT_FOUND (307) 87
    T_LOG_NOT_FOUND_VALUE (308) 87
    T_USER (309) 80
    T_USER_VALUE (310) 80
    T_GROUP (311) 81
    T_GROUP_VALUE (312) 81
    T_WORKER_PROCESSES (313) 55
    T_WORKER_PROCESSES_VALUE (314) 55
    T_PID (315) 60
    T_PID_VALUE (316) 60
    T_EVENTS (317) 9
    T_MULTI_ACCEPT (318) 92
    T_MULTI_ACCEPT_VALUE (319) 92
    T_WORKER_CONNECTIONS (320) 57
    T_WORKER_CONNECTIONS_VALUE (321) 57
    T_GZIP (322) 64
    T_GZIP_VALUE (323) 64
    T_SENDFILE (324) 65
    T_SENDFILE_VALUE (325) 65
    T_TYPES_HASH (326) 66
    T_TYPES_HASH_VALUE (327) 66
    T_SERVER_TOKENS (328) 67
    T_SERVER_TOKENS_VALUE (329) 67
    T_SERVER_NAMES_HASH_BUCKET_SIZE (330) 68
    T_SERVER_NAMES_HASH_BUCKET_SIZE_VALUE (331) 68
    T_SSL_PROTOCOLS (332) 69 70 71 72
    T_SSL_PROTOCOLS_VALUE (333) 69 70 71 72
    T_SSL_PROTOCOLS_VALUE2 (334) 70 71 72
    T_SSL_PROTOCOLS_VALUE3 (335) 71 72
    T_SSL_PROTOCOLS_VALUE4 (336) 72
    T_SSL_PREFER_SERVER_CIPHERS (337) 73
    T_SSL_PREFER_SERVER_CIPHERS_VALUE (338) 73
    T_HTTP (339) 56
    T_TCP_NOPUSH (340) 58
    T_TCP_NOPUSH_VALUE (341) 58
    T_TYPES_HASH_MAX_SIZE (342)
    T_TYPES_HASH_MAX_SIZE_VALUE (343)
    T_DEFAULT_TYPE (344) 74
    T_DEFAULT_TYPE_VALUE (345) 74


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    servers (95)
        on left: 1 2 3 4 5 6 7 8
        on right: 0 1 42
    events (96)
        on left: 9
        on right: 7
    event_body_list (97)
        on left: 10 11
        on right: 9
    server_body (98)
        on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
        on right: 93
    location_body (99)
        on left: 28 29 30 31 32 33 34 35 36 37 38 39 40
        on right: 99
    http_body (100)
        on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54
        on right: 56
    worker_processes (101)
        on left: 55
        on right: 5
    http (102)
        on left: 56
        on right: 8
    worker_connections (103)
        on left: 57
        on right: 10
    tcp_nopush (104)
        on left: 58
        on right: 53
    server (105)
        on left: 59
        on right: 1 2
    pid (106)
        on left: 60
        on right: 6
    rewrite (107)
        on left: 61
        on right: 25
    deny (108)
        on left: 62
        on right: 22 35
    hide_header (109)
        on left: 63
        on right: 36
    gzip (110)
        on left: 64
        on right: 51
    sendfile (111)
        on left: 65
        on right: 43
    types_hash (112)
        on left: 66
        on right: 44
    server_tokens (113)
        on left: 67
        on right: 45
    server_names_hash_bucket_size (114)
        on left: 68
        on right: 46
    ssl_protocols (115)
        on left: 69 70 71 72
        on right: 47
    ssl_prefer_server_ciphers (116)
        on left: 73
        on right: 48
    default_type (117)
        on left: 74
        on right: 54
    listen (118)
        on left: 75 76
        on right: 17
    server_name_values (119)
        on left: 77 78
        on right: 12 78
    error_log (120)
        on left: 79
        on right: 14 50
    user (121)
        on left: 80
        on right: 3
    group (122)
        on left: 81
        on right: 4
    location_optional_regexp_path (123)
        on left: 82 83
        on right: 15
    add_header (124)
        on left: 84
        on right: 18 37
    index (125)
        on left: 85
        on right: 19
    access_log (126)
        on left: 86
        on right: 27 39 49
    log_not_found (127)
        on left: 87
        on right: 26 40
    charset (128)
        on left: 88
        on right: 20
    error_page (129)
        on left: 89
        on right: 21 38
    include (130)
        on left: 90
        on right: 23 52
    return (131)
        on left: 91
        on right: 24
    multi_accept (132)
        on left: 92
        on right: 11
    server_body_list (133)
        on left: 93 94
        on right: 59 93
    optional_return_body (134)
        on left: 95 96
        on right: 28 91
    try_files_path_list (135)
        on left: 97 98
        on right: 34 98
    location_body_list (136)
        on left: 99 100
        on right: 15 16 99


State 0

    0 $accept: • servers $end

    T_SERVER            shift, and go to state 1
    T_USER              shift, and go to state 2
    T_GROUP             shift, and go to state 3
    T_WORKER_PROCESSES  shift, and go to state 4
    T_PID               shift, and go to state 5
    T_EVENTS            shift, and go to state 6
    T_HTTP              shift, and go to state 7

    servers           go to state 8
    events            go to state 9
    worker_processes  go to state 10
    http              go to state 11
    server            go to state 12
    pid               go to state 13
    user              go to state 14
    group             go to state 15


State 1

   59 server: T_SERVER • '{' server_body_list '}'

    '{'  shift, and go to state 16


State 2

   80 user: T_USER • T_USER_VALUE ';'

    T_USER_VALUE  shift, and go to state 17


State 3

   81 group: T_GROUP • T_GROUP_VALUE ';'

    T_GROUP_VALUE  shift, and go to state 18


State 4

   55 worker_processes: T_WORKER_PROCESSES • T_WORKER_PROCESSES_VALUE ';'

    T_WORKER_PROCESSES_VALUE  shift, and go to state 19


State 5

   60 pid: T_PID • T_PID_VALUE ';'

    T_PID_VALUE  shift, and go to state 20


State 6

    9 events: T_EVENTS • '{' event_body_list '}'

    '{'  shift, and go to state 21


State 7

   56 http: T_HTTP • '{' http_body '}'

    '{'  shift, and go to state 22


State 8

    0 $accept: servers • $end
    1 servers: servers • server

    $end      shift, and go to state 23
    T_SERVER  shift, and go to state 1

    server  go to state 24


State 9

    7 servers: events •

    $default  reduce using rule 7 (servers)


State 10

    5 servers: worker_processes •

    $default  reduce using rule 5 (servers)


State 11

    8 servers: http •

    $default  reduce using rule 8 (servers)


State 12

    2 servers: server •

    $default  reduce using rule 2 (servers)


State 13

    6 servers: pid •

    $default  reduce using rule 6 (servers)


State 14

    3 servers: user •

    $default  reduce using rule 3 (servers)


State 15

    4 servers: group •

    $default  reduce using rule 4 (servers)


State 16

   59 server: T_SERVER '{' • server_body_list '}'

    $default  reduce using rule 94 (server_body_list)

    server_body_list  go to state 25


State 17

   80 user: T_USER T_USER_VALUE • ';'

    ';'  shift, and go to state 26


State 18

   81 group: T_GROUP T_GROUP_VALUE • ';'

    ';'  shift, and go to state 27


State 19

   55 worker_processes: T_WORKER_PROCESSES T_WORKER_PROCESSES_VALUE • ';'

    ';'  shift, and go to state 28


State 20

   60 pid: T_PID T_PID_VALUE • ';'

    ';'  shift, and go to state 29


State 21

    9 events: T_EVENTS '{' • event_body_list '}'

    T_MULTI_ACCEPT        shift, and go to state 30
    T_WORKER_CONNECTIONS  shift, and go to state 31

    event_body_list     go to state 32
    worker_connections  go to state 33
    multi_accept        go to state 34


State 22

   56 http: T_HTTP '{' • http_body '}'

    T_SERVER                         shift, and go to state 1
    T_ERROR_LOG                      shift, and go to state 35
    T_ACCESS_LOG                     shift, and go to state 36
    T_INCLUDE                        shift, and go to state 37
    T_USER                           shift, and go to state 2
    T_GROUP                          shift, and go to state 3
    T_WORKER_PROCESSES               shift, and go to state 4
    T_PID                            shift, and go to state 5
    T_EVENTS                         shift, and go to state 6
    T_GZIP                           shift, and go to state 38
    T_SENDFILE                       shift, and go to state 39
    T_TYPES_HASH                     shift, and go to state 40
    T_SERVER_TOKENS                  shift, and go to state 41
    T_SERVER_NAMES_HASH_BUCKET_SIZE  shift, and go to state 42
    T_SSL_PROTOCOLS                  shift, and go to state 43
    T_SSL_PREFER_SERVER_CIPHERS      shift, and go to state 44
    T_HTTP                           shift, and go to state 7
    T_TCP_NOPUSH                     shift, and go to state 45
    T_DEFAULT_TYPE                   shift, and go to state 46

    $default  reduce using rule 41 (http_body)

    servers                        go to state 47
    events                         go to state 9
    http_body                      go to state 48
    worker_processes               go to state 10
    http                           go to state 11
    tcp_nopush                     go to state 49
    server                         go to state 12
    pid                            go to state 13
    gzip                           go to state 50
    sendfile                       go to state 51
    types_hash                     go to state 52
    server_tokens                  go to state 53
    server_names_hash_bucket_size  go to state 54
    ssl_protocols                  go to state 55
    ssl_prefer_server_ciphers      go to state 56
    default_type                   go to state 57
    error_log                      go to state 58
    user                           go to state 14
    group                          go to state 15
    access_log                     go to state 59
    include                        go to state 60


State 23

    0 $accept: servers $end •

    $default  accept


State 24

    1 servers: servers server •

    $default  reduce using rule 1 (servers)


State 25

   59 server: T_SERVER '{' server_body_list • '}'
   93 server_body_list: server_body_list • server_body

    T_LISTEN         shift, and go to state 61
    T_SERVER_NAME    shift, and go to state 62
    T_SERVER_ROOT    shift, and go to state 63
    T_LOCATION       shift, and go to state 64
    T_RETURN         shift, and go to state 65
    T_REWRITE        shift, and go to state 66
    T_ERROR_LOG      shift, and go to state 35
    T_ACCESS_LOG     shift, and go to state 36
    T_INCLUDE        shift, and go to state 37
    T_ADD_HEADER     shift, and go to state 67
    T_INDEX          shift, and go to state 68
    T_CHARSET        shift, and go to state 69
    T_ERROR_PAGE     shift, and go to state 70
    T_DENY           shift, and go to state 71
    T_LOG_NOT_FOUND  shift, and go to state 72
    '}'              shift, and go to state 73

    server_body    go to state 74
    rewrite        go to state 75
    deny           go to state 76
    listen         go to state 77
    error_log      go to state 78
    add_header     go to state 79
    index          go to state 80
    access_log     go to state 81
    log_not_found  go to state 82
    charset        go to state 83
    error_page     go to state 84
    include        go to state 85
    return         go to state 86


State 26

   80 user: T_USER T_USER_VALUE ';' •

    $default  reduce using rule 80 (user)


State 27

   81 group: T_GROUP T_GROUP_VALUE ';' •

    $default  reduce using rule 81 (group)


State 28

   55 worker_processes: T_WORKER_PROCESSES T_WORKER_PROCESSES_VALUE ';' •

    $default  reduce using rule 55 (worker_processes)


State 29

   60 pid: T_PID T_PID_VALUE ';' •

    $default  reduce using rule 60 (pid)


State 30

   92 multi_accept: T_MULTI_ACCEPT • T_MULTI_ACCEPT_VALUE ';'

    T_MULTI_ACCEPT_VALUE  shift, and go to state 87


State 31

   57 worker_connections: T_WORKER_CONNECTIONS • T_WORKER_CONNECTIONS_VALUE ';'

    T_WORKER_CONNECTIONS_VALUE  shift, and go to state 88


State 32
